fixnavbar on mobile

--- a/style.css
+++ b/style.css
@@ -293,4 +293,7 @@ b{
 
 @media (hover: none) {
     /* behaviour for touch browsers */
+    .navbar{
+        padding-top: 10px;
+    }
   }
